# PEL

Amazon/: CMakeLists.txt  main.cpp
Dlib1/: CMakeLists.txt  main.cpp
Dlib2/: CMakeLists.txt  main.cpp
Ej1_AC/: CMakeLists.txt  main.cpp
Ej2_Beatles/: CMakeLists.txt  main.cpp
Ej3_Tokenizador/: CMakeLists.txt  main.cpp
Ej4_Spiderman/: CMakeLists.txt  main.cpp
Ej5_Particion/: CMakeLists.txt  main.cpp
List/: CMakeLists.txt  main.cpp
Punteros/: CMakeLists.txt  main.cpp
Recursos_Ejercicios/: CMakeLists.txt  terminal.hpp
Recursos_Ejercicios/Ejercicio1/: compiler_explorer_data.txt
Recursos_Ejercicios/Ejercicio2/: bandas.jsonl
Recursos_Ejercicios/Ejercicio3/: data_2.csv  file_to_string.txt
Recursos_Ejercicios/Individual1/: roland_garros.jsonl
StarWars/: CMakeLists.txt  main.cpp
Vector/: CMakeLists.txt  main.cpp
